# OTExtension

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  Makefile.bat  README.md
cmake/: OTExtensionConfig.cmake.in  RelicConfig.cmake.in
cmake/Modules/: AddENCRYPTO_utils.cmake  AddRelic.cmake  AndroidCacheVariables.cmake  FetchRelic.cmake  OTExtensionCacheVariables.cmake  PatchRelic.cmake
cmake/Modules/RelicPatches/cmake/: gmp.cmake
mains/: CMakeLists.txt  otmain.cpp  otmain.h  test.cpp  test.h
ot/: OTconstants.h  alsz-ot-ext-rec.cpp  alsz-ot-ext-rec.h  alsz-ot-ext-snd.cpp  alsz-ot-ext-snd.h  asharov-lindell.cpp  asharov-lindell.h  baseOT.cpp  baseOT.h  brick.cpp  brick.h  carryless-multiplication.cpp  carryless-multiplication.h  double-exp.cpp  double-exp.h  iknp-ot-ext-rec.cpp  iknp-ot-ext-rec.h  iknp-ot-ext-snd.cpp  iknp-ot-ext-snd.h  kk-ot-ext-rec.cpp  kk-ot-ext-rec.h  kk-ot-ext-snd.cpp  kk-ot-ext-snd.h  kk-ot-ext.h  kos-ot-ext-rec.cpp  kos-ot-ext-rec.h  kos-ot-ext-snd.cpp  kos-ot-ext-snd.h  maskingfunction.h  naor-pinkas.cpp  naor-pinkas.h  naor-pinkas_noro.cpp  naor-pinkas_noro.h  nnob-ot-ext-rec.cpp  nnob-ot-ext-rec.h  nnob-ot-ext-snd.cpp  nnob-ot-ext-snd.h  oos-ot-ext-rec.cpp  oos-ot-ext-rec.h  oos-ot-ext-snd.cpp  (+14 more)
util/: cbitvector.cpp  cbitvector.h  channel.h  codewords.h  constants.h  parse_options.cpp  parse_options.h  rcvthread.h  sndthread.h  socket.h  thread.h  typedefs.h
util/crypto/: crypto.cpp  crypto.h  ecc-pk-crypto.cpp  ecc-pk-crypto.h  gmp-pk-crypto.cpp  gmp-pk-crypto.h  intrin_sequential_enc8.cpp  pk-crypto.h
